all: update builds to use enable-preview